src/Application/Client/CSharp/ScalienClient/scaliendb_clientPINVOKE.cs


  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_NodeParams_AddNode")]
  public static extern void SDBP_NodeParams_AddNode(HandleRef jarg1, string jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_NodeParams_nodec_set")]
  public static extern void SDBP_NodeParams_nodec_set(HandleRef jarg1, int jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_NodeParams_nodec_get")]
  public static extern int SDBP_NodeParams_nodec_get(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_NodeParams_nodes_set")]
  public static extern void SDBP_NodeParams_nodes_set(HandleRef jarg1, HandleRef jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_NodeParams_nodes_get")]
  public static extern IntPtr SDBP_NodeParams_nodes_get(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_NodeParams_num_set")]
  public static extern void SDBP_NodeParams_num_set(HandleRef jarg1, int jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_NodeParams_num_get")]
  public static extern int SDBP_NodeParams_num_get(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_new_SDBP_Buffer")]
  public static extern IntPtr new_SDBP_Buffer();

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Buffer_SetBuffer")]
  public static extern void SDBP_Buffer_SetBuffer(HandleRef jarg1, IntPtr jarg2, int jarg3);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Buffer_data_set")]
  public static extern void SDBP_Buffer_data_set(HandleRef jarg1, IntPtr jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Buffer_data_get")]
  public static extern IntPtr SDBP_Buffer_data_get(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Buffer_len_set")]
  public static extern void SDBP_Buffer_len_set(HandleRef jarg1, int jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Buffer_len_get")]
  public static extern int SDBP_Buffer_len_get(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_delete_SDBP_Buffer")]
  public static extern void delete_SDBP_Buffer(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultClose")]
  public static extern void SDBP_ResultClose(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultKey")]
  public static extern string SDBP_ResultKey(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultValue")]
  public static extern string SDBP_ResultValue(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultKeyBuffer")]
  public static extern IntPtr SDBP_ResultKeyBuffer(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultValueBuffer")]
  public static extern IntPtr SDBP_ResultValueBuffer(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultSignedNumber")]
  public static extern long SDBP_ResultSignedNumber(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultNumber")]
  public static extern ulong SDBP_ResultNumber(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultIsConditionalSuccess")]
  public static extern bool SDBP_ResultIsConditionalSuccess(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultDatabaseID")]
  public static extern ulong SDBP_ResultDatabaseID(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultTableID")]
  public static extern ulong SDBP_ResultTableID(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultBegin")]
  public static extern void SDBP_ResultBegin(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultNext")]
  public static extern void SDBP_ResultNext(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultIsEnd")]
  public static extern bool SDBP_ResultIsEnd(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultIsFinished")]
  public static extern bool SDBP_ResultIsFinished(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultTransportStatus")]
  public static extern int SDBP_ResultTransportStatus(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultCommandStatus")]
  public static extern int SDBP_ResultCommandStatus(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultNumNodes")]
  public static extern uint SDBP_ResultNumNodes(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultNodeID")]
  public static extern ulong SDBP_ResultNodeID(HandleRef jarg1, uint jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_ResultElapsedTime")]
  public static extern uint SDBP_ResultElapsedTime(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Create")]
  public static extern IntPtr SDBP_Create();

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Init")]
  public static extern int SDBP_Init(HandleRef jarg1, HandleRef jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Destroy")]
  public static extern void SDBP_Destroy(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetResult")]
  public static extern IntPtr SDBP_GetResult(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetGlobalTimeout")]
  public static extern void SDBP_SetGlobalTimeout(HandleRef jarg1, ulong jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetMasterTimeout")]
  public static extern void SDBP_SetMasterTimeout(HandleRef jarg1, ulong jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetGlobalTimeout")]
  public static extern ulong SDBP_GetGlobalTimeout(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetMasterTimeout")]
  public static extern ulong SDBP_GetMasterTimeout(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetJSONConfigState")]
  public static extern string SDBP_GetJSONConfigState(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_WaitConfigState")]
  public static extern void SDBP_WaitConfigState(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetConsistencyMode")]
  public static extern void SDBP_SetConsistencyMode(HandleRef jarg1, int jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetBatchMode")]
  public static extern void SDBP_SetBatchMode(HandleRef jarg1, int jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetBatchLimit")]
  public static extern void SDBP_SetBatchLimit(HandleRef jarg1, uint jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_CreateDatabase")]
  public static extern int SDBP_CreateDatabase(HandleRef jarg1, string jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_RenameDatabase")]
  public static extern int SDBP_RenameDatabase(HandleRef jarg1, ulong jarg2, string jarg3);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_DeleteDatabase")]
  public static extern int SDBP_DeleteDatabase(HandleRef jarg1, ulong jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_CreateTable")]
  public static extern int SDBP_CreateTable(HandleRef jarg1, ulong jarg2, ulong jarg3, string jarg4);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_RenameTable")]
  public static extern int SDBP_RenameTable(HandleRef jarg1, ulong jarg2, string jarg3);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_DeleteTable")]
  public static extern int SDBP_DeleteTable(HandleRef jarg1, ulong jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_TruncateTable")]
  public static extern int SDBP_TruncateTable(HandleRef jarg1, ulong jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetNumQuorums")]
  public static extern uint SDBP_GetNumQuorums(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetQuorumIDAt")]
  public static extern ulong SDBP_GetQuorumIDAt(HandleRef jarg1, uint jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetQuorumNameAt")]
  public static extern string SDBP_GetQuorumNameAt(HandleRef jarg1, uint jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetQuorumIDByName")]
  public static extern ulong SDBP_GetQuorumIDByName(HandleRef jarg1, string jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetNumDatabases")]
  public static extern uint SDBP_GetNumDatabases(HandleRef jarg1);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetDatabaseIDAt")]
  public static extern ulong SDBP_GetDatabaseIDAt(HandleRef jarg1, uint jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetDatabaseNameAt")]
  public static extern string SDBP_GetDatabaseNameAt(HandleRef jarg1, uint jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetDatabaseIDByName")]
  public static extern ulong SDBP_GetDatabaseIDByName(HandleRef jarg1, string jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetNumTables")]
  public static extern uint SDBP_GetNumTables(HandleRef jarg1, ulong jarg2);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetTableIDAt")]
  public static extern ulong SDBP_GetTableIDAt(HandleRef jarg1, ulong jarg2, uint jarg3);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetTableNameAt")]
  public static extern string SDBP_GetTableNameAt(HandleRef jarg1, ulong jarg2, uint jarg3);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetTableIDByName")]
  public static extern ulong SDBP_GetTableIDByName(HandleRef jarg1, ulong jarg2, string jarg3);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Get")]
  public static extern int SDBP_Get(HandleRef jarg1, ulong jarg2, string jarg3);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_GetCStr")]
  public static extern int SDBP_GetCStr(HandleRef jarg1, ulong jarg2, IntPtr jarg3, int jarg4);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Set")]
  public static extern int SDBP_Set(HandleRef jarg1, ulong jarg2, string jarg3, string jarg4);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SetCStr")]
  public static extern int SDBP_SetCStr(HandleRef jarg1, ulong jarg2, IntPtr jarg3, int jarg4, IntPtr jarg5, int jarg6);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Add")]
  public static extern int SDBP_Add(HandleRef jarg1, ulong jarg2, string jarg3, long jarg4);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_AddCStr")]
  public static extern int SDBP_AddCStr(HandleRef jarg1, ulong jarg2, IntPtr jarg3, int jarg4, long jarg5);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_Delete")]
  public static extern int SDBP_Delete(HandleRef jarg1, ulong jarg2, string jarg3);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_DeleteCStr")]
  public static extern int SDBP_DeleteCStr(HandleRef jarg1, ulong jarg2, IntPtr jarg3, int jarg4);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SequenceSet")]
  public static extern int SDBP_SequenceSet(HandleRef jarg1, ulong jarg2, string jarg3, ulong jarg4);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SequenceSetCStr")]
  public static extern int SDBP_SequenceSetCStr(HandleRef jarg1, ulong jarg2, IntPtr jarg3, int jarg4, ulong jarg5);

  [DllImport("scaliendb_client", EntryPoint="CSharp_SDBP_SequenceNext")]
  public static extern int SDBP_SequenceNext(HandleRef jarg1, ulong jarg2, string jarg3);
